# learn-opengl-rust

./: Cargo.toml  README.md  flake.nix
src/: main.rs  shaders.rs
src/_1_getting_started/: _1_1_hello_window.rs  _2_1_hello_triangle.rs  _2_2_hello_triangle_ebo.rs  _2_3_hello_triangle_ex_2_triangles.rs  _2_4_hello_triangle_ex_2_vao_vbo.rs  _2_5_hello_triangle_ex_yellow_triangle.rs  _3_1_shaders_uniform.rs  _3_2_shaders_more_attributes.rs  _3_3_shader_class.rs  _4_1_textures.rs  _4_2_texture_uniform.rs  mod.rs
src/_1_getting_started/shaders/: 3.3.shader.vs  4.1.textures.vs
