[package]
name = "learn-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = { version = "0.55", default-features = false, features = ["wayland"] }
anyhow = { version = "1" }
gl = { version = "0.14" }
cgmath = { version = "0.18" }
image = { version = "0.25" }
